--- a/source/_posts/ecnuchemistry/965.md
+++ b/source/_posts/ecnuchemistry/965.md
@@ -6,6 +6,7 @@ categories: ECNUChemistry
 
 # 2003年
 ![](https://pic.superbed.cn/item/5ca9c2ea3a213b0417d253f1)
+<!-- more -->
 ![](https://pic.superbed.cn/item/5ca9c2ea3a213b0417d253f6)
 ![](https://pic.superbed.cn/item/5ca9c2ea3a213b0417d253fb)
 ![](https://pic.superbed.cn/item/5ca9c2ea3a213b0417d25402)
