--- a/source/_posts/internship/d33.md
+++ b/source/_posts/internship/d33.md
@@ -10,6 +10,6 @@ tags:
 
 早上又做了2005年诺奖烯烃复分解的海报，
 
-![烯烃复分解](https://ww1.sinaimg.cn/large/005YhI8igy1fwjj76dq13j319o1rsnpd)
+![烯烃复分解](https://ae01.alicdn.com/kf/HTB19Z2jTwHqK1RjSZFkq6x.WFXaQ.jpg)
 
 发给左博，左博表示可以。于是我下午找前河西打印店打了出来，一共64元，给开发票，晚上便收到了海报。
