--- a/source/_posts/internship/d34.md
+++ b/source/_posts/internship/d34.md
@@ -10,11 +10,11 @@ tags:
 
 把昨天打印的海报贴在了墙上，左博表示可以，
 
-![poster](https://ww1.sinaimg.cn/large/005YhI8igy1fwjjljxbpcj31kw16oqv5)
+![poster](https://ae01.alicdn.com/kf/HTB1U0YjTAvoK1RjSZFwq6AiCFXaG.jpg)
 
 并且让我再做几张机理的海报，涉及到公司正在进行的项目，
 
-![FC](https://ww1.sinaimg.cn/large/005YhI8igy1fwjjmrovmxj319o1rsqv5)
+![FC](https://ae01.alicdn.com/kf/HTB1oS_cTzTpK1RjSZKPq6y3UpXaP.jpg)
 
 此外，还让我做公司规章制度的海报。
 
