--- a/source/_posts/job2019.md
+++ b/source/_posts/job2019.md
@@ -1,6 +1,6 @@
 ---
 lang: zh-CN
-title: 华东师范大学化学与分子工程学院本科毕业生就业率达100%
+title: 2018-2019学年华东师范大学化学与分子工程学院本科毕业生就业率达百分之百
 categories:
   - Life
 date: 2019-11-22
