fix: fix bug (#438)
* fix: fix bug

* Update job2019.md

* Update job2019.md

* %?

--- a/source/_posts/job2019.md
+++ b/source/_posts/job2019.md
@@ -1,11 +1,11 @@
 ---
 lang: zh-CN
-title: 2018-2019学年华东师范大学化学与分子工程学院本科毕业生就业率达100%
+title: 2018-2019学年华东师范大学化学与分子工程学院本科毕业生就业率达百分之百
 categories:
   - Life
 date: 2019-11-22
+tags:
 ---
-
 信息公开网公开的《华东师范大学2018-2019学年本科教学质量报告》[^1]显示，2018-2019学年华东师范大学化学与分子工程学院本科毕业生就业率达100%。化学与分子工程学院是学校10个本科毕业生就业率达100%的院系之一。
 
 **参考资料**  
