--- a/source/_posts/job20192.md
+++ b/source/_posts/job20192.md
@@ -1,6 +1,6 @@
 ---
 lang: zh-CN
-title: 华东师范大学化学与分子工程学院2019届就业率达98.78%
+title: 华东师范大学化学与分子工程学院2019届就业率超全校平均水平
 categories:
   - Life
 date: 2020-01-06
