--- a/source/_posts/internship/d34.md
+++ b/source/_posts/internship/d34.md
@@ -10,11 +10,11 @@ tags:
 
 把昨天打印的海报贴在了墙上，左博表示可以，
 
-![poster](https://ae01.alicdn.com/kf/HTB1U0YjTAvoK1RjSZFwq6AiCFXaG.jpg)
+![poster](//images.weserv.nl/?url=drive.google.com/uc?id=19Vb9zKnjaO-tHueBnGCGJJz3_sM8j_YE)
 
 并且让我再做几张机理的海报，涉及到公司正在进行的项目，
 
-![FC](https://ae01.alicdn.com/kf/HTB1oS_cTzTpK1RjSZKPq6y3UpXaP.jpg)
+![FC](//images.weserv.nl/?url=drive.google.com/uc?id=1hmlsip4vq15_qxw0rZuNy57Om2vjQjQJ)
 
 此外，还让我做公司规章制度的海报。
 
