--- a/source/_posts/internship/d30.md
+++ b/source/_posts/internship/d30.md
@@ -10,4 +10,4 @@ tags:
 
 为了布置会议室，做了一个羟醛缩合的海报。
 
-![羟醛缩合](https://ae01.alicdn.com/kf/HTB1736oXvfsK1RjSszg761XzpXaU.png)
+![羟醛缩合](//images.weserv.nl/?url=drive.google.com/uc?id=1HF8rM2yLNvfL1Sae8kc4rTXPqAf3U6eU)
