--- a/source/_posts/job20192.md
+++ b/source/_posts/job20192.md
@@ -10,4 +10,4 @@ tags: job
 
 《就业质量报告》同时公布了院系本科毕业生留学、升学比例。化学与分子工程学院本科毕业生境内升学率达41.67%，境外留学率达9.72%。
 
-![就业质量报告院系留学、升学数据](https://pic.downk.cc/item/5e20ef6b2fb38b8c3c2732a5.jpg)
+![就业质量报告院系留学、升学数据](//images.weserv.nl/?url=drive.google.com/uc?id=18dmBfgxTBD0LVcS4P2tBzgX-pwn5Lehv)
