chore: update images

--- a/source/_posts/internship/d34.md
+++ b/source/_posts/internship/d34.md
@@ -10,11 +10,11 @@ tags:
 
 把昨天打印的海报贴在了墙上，左博表示可以，
 
-![poster](https://images.weserv.nl/?url=drive.google.com/uc?id=19Vb9zKnjaO-tHueBnGCGJJz3_sM8j_YE)
+![poster](https://img.njzjz.win/?url=drive.google.com/uc?id=19Vb9zKnjaO-tHueBnGCGJJz3_sM8j_YE)
 
 并且让我再做几张机理的海报，涉及到公司正在进行的项目，
 
-![FC](https://images.weserv.nl/?url=drive.google.com/uc?id=1hmlsip4vq15_qxw0rZuNy57Om2vjQjQJ)
+![FC](https://img.njzjz.win/?url=drive.google.com/uc?id=1hmlsip4vq15_qxw0rZuNy57Om2vjQjQJ)
 
 此外，还让我做公司规章制度的海报。
 
