remove cdn link in the raw markdown file

--- a/source/_posts/internship/d29.md
+++ b/source/_posts/internship/d29.md
@@ -11,6 +11,6 @@ tags:
 
 上午把招聘海报做出来了，融入了公司简介和招聘信息，并加了一些照片，还放了公司的联系方式。不多说，直接上图：
 
-![招聘海报](https://img.njzjz.win/?url=drive.google.com/uc?id=1NsyMu4vNDaPwAynZJNnU-Qu17W813ldf)
+![招聘海报](https://drive.google.com/uc?id=1NsyMu4vNDaPwAynZJNnU-Qu17W813ldf)
 
 下午科创项目要答辩，早在9月就和辅导员请了假，于是14:50的时候赶了回去答辩（然而评委并没有提任何问题），顺便和导师讨论问题。
