--- a/source/_posts/job2019.md
+++ b/source/_posts/job2019.md
@@ -7,6 +7,7 @@ date: 2019-11-22
 tags:
 ---
 信息公开网公开的《华东师范大学2018-2019学年本科教学质量报告》[^1]显示，2018-2019学年华东师范大学化学与分子工程学院本科毕业生就业率达100%。化学与分子工程学院是学校10个本科毕业生就业率达100%的院系之一。
+<!--more-->
 
 **参考资料**  
 [^1]: 华东师范大学2018-2019学年本科教学质量报告 [http://xxgk.ecnu.edu.cn/s/202/t/377/a8/04/info174084.htm](http://xxgk.ecnu.edu.cn/s/202/t/377/a8/04/info174084.htm)
