--- a/source/_posts/nj0328.md
+++ b/source/_posts/nj0328.md
@@ -8,6 +8,7 @@ tags:
 ---
 
 NJDOH于3月24日起公布了所有测试点的Negative数据总和，从图中可以看出，3月25日起，测试量稳定在了5k左右，应该就是目前的测试极限了。然而今明两天要将测试量限制在每日500，试剂盒的供应可能存在问题。
+<!--more-->
 
 ![image alt text](https://drive.google.com/uc?id=1ptAY5tOFNbX3BtjNd5wgUwxsnY89Vlse)
 
