fix: add zhihu banner

--- a/source/_posts/job20192.md
+++ b/source/_posts/job20192.md
@@ -4,8 +4,10 @@ title: 华东师范大学化学与分子工程学院2019届就业率超全校平
 categories:
   - Life
 date: 2020-01-06
-tags: job
+tags: 
+  - job
 ---
+{% source zhihu 103296228 2020 1 7 %}
 日前发布的《华东师范大学2019年毕业生就业质量报告》显示，华东师范大学化学与分子工程学院2019年共毕业245人，就业率达98.78%（242人），仅3人暂不就业。就业率超过孟宪承书院、计算机科学与软件工程学院等23个院系，也超过全校平均水平（96.91%）。
 <!--more-->
 
