--- a/source/_posts/nj0328.md
+++ b/source/_posts/nj0328.md
@@ -5,7 +5,9 @@ categories:
   - Life
 date: 2020-03-29
 tags:
+  - COVID-19
 ---
+{% source zhihu 120309636 2020 3 29 %}
 
 NJDOH于3月24日起公布了所有测试点的Negative数据总和，从图中可以看出，3月25日起，测试量稳定在了5k左右，应该就是目前的测试极限了。然而今明两天要将测试量限制在每日500，试剂盒的供应可能存在问题。
 <!--more-->
