--- a/source/_posts/520.md
+++ b/source/_posts/520.md
@@ -8,8 +8,9 @@ categories:
 date: 2018-05-21 00:24:58
 tags:
 ---
+{% source wechat gL9b48Eu2rpEdV9fO8ayIg 2018 5 21 %}
 
-本文2018年5月21日首发[微信公众号](https://mp.weixin.qq.com/s?__biz=MzIyMjA1MDA4MQ==&mid=2455134464&idx=1&sn=fa2d728d61e46e6a79db238e5ff304ce&chksm=ff91a34ec8e62a582eca9ed7d04132512368dcf49f1371b43a7225fef902e3bc61e8695e0379#rd)，作者：华东师范大学化学与分子工程学院团委学生会主席团
+作者：华东师范大学化学与分子工程学院团委学生会主席团
 
 ![1.jpg](https://api.njzjz.win/1JJer9ShYoOeyoWxedkTNveT2swPeK1S3)
 <!--more-->
