chore: fix typo

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -66,7 +66,7 @@
   googlescholar = 11110115133859772670,
   github = {tongzhugroup/reacnetgenerator},
   researchgate=337541969,
-  pdf = {https://bbf.njzjz.win/manuscript/c9cp05091d_7.pdf}
+  pdf = {https://bf.njzjz.win/manuscript/c9cp05091d_7.pdf}
 }
 
 @article{Zeng_EnergyFuels_2021_v35_p762,
@@ -204,7 +204,7 @@
   image = {https://pubs.rsc.org/en/Image/Get?imageInfo.ImageIdentifier.ManuscriptID=C9CP03598B},
   googlescholar = 13761803133090538045,
   researchgate = 335902154,
-  pdf = {https://bbf.njzjz.win/manuscript/c9cp03598b_5.pdf}
+  pdf = {https://bf.njzjz.win/manuscript/c9cp03598b_5.pdf}
 }
 
 @article{Cao_ChemRxiv_2019,
