chore: update image links

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -215,7 +215,7 @@
   doi={10.26434/chemrxiv.11462160},
   pdf={https://chemrxiv.org/ndownloader/files/20451738},
   googlescholar=14906626322539446006,
-  image={https://img.njzjz.win/?url=https://api.njzjz.win/1KGTgRSl-7ossnmCA_KBy0Wb-_hhUiyM0&default=https://api.njzjz.win/1KGTgRSl-7ossnmCA_KBy0Wb-_hhUiyM0},
+  image={https://api.njzjz.win/1KGTgRSl-7ossnmCA_KBy0Wb-_hhUiyM0},
   github={tongzhugroup/aimdfragmentation},
   researchgate=338283292
 }
