chore: change image directory

--- a/source/_posts/internship/d30.md
+++ b/source/_posts/internship/d30.md
@@ -10,4 +10,4 @@ tags:
 
 为了布置会议室，做了一个羟醛缩合的海报。
 
-![羟醛缩合](https://api.njzjz.win/1HF8rM2yLNvfL1Sae8kc4rTXPqAf3U6eU)
+![羟醛缩合](https://bb.njzjz.win/file/jinzhe/img/1HF8rM2yLNvfL1Sae8kc4rTXPqAf3U6eU)
