--- a/source/_posts/internship/d33.md
+++ b/source/_posts/internship/d33.md
@@ -10,6 +10,6 @@ tags:
 
 早上又做了2005年诺奖烯烃复分解的海报，
 
-![烯烃复分解](https://api.njzjz.win/1Y7Kf4AIdAzH10jayoQbw0kk4EtowXWB6)
+![烯烃复分解](https://bb.njzjz.win/file/jinzhe/img/1Y7Kf4AIdAzH10jayoQbw0kk4EtowXWB6)
 
 发给左博，左博表示可以。于是我下午找前河西打印店打了出来，一共64元，给开发票，晚上便收到了海报。
