chore: update image urls and bilitube tag

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -215,7 +215,7 @@
   doi={10.26434/chemrxiv.11462160},
   pdf={https://chemrxiv.org/ndownloader/files/20451738},
   googlescholar=14906626322539446006,
-  image={https://api.njzjz.win/1KGTgRSl-7ossnmCA_KBy0Wb-_hhUiyM0},
+  image={https://www.researchgate.net/profile/Jinzhe_Zeng/publication/338283292/figure/fig1/AS:934167122542592@1599734206152/Fragmentation-scheme-of-the-MFCC-combustion-approach-The-blue-cycles-show-that-a-single.png},
   github={tongzhugroup/aimdfragmentation},
   researchgate=338283292
 }
