chore: mirgate images to cloudflare pages

--- a/source/_posts/internship/d32.md
+++ b/source/_posts/internship/d32.md
@@ -10,10 +10,10 @@ tags:
 
 昨天我考GRE的时候，左博向我要会议室的详细布置方案。我考完后把我做的海报发给了他。他表示，羟醛缩合反应太简单了，找些复杂点的反应，比如Heck反应、Suzuki反应、Sonogashira偶联反应。这不就是2010年诺贝尔化学奖的反应么，我大二时上了《有机合成》课，最后的大作业使我对这几个反应还有印象。于是今天我把这几个反应做了出来，左博表示可以再找几个有难度的反应，赶紧打出来挂墙上。之所以不贴墙上，是因为公司经营场所是租的，可能会变动。我问王琛哪里的打印店能开发票还能送货上门，他表示前河西打印店可以，等我再做几张海报就去试试。
 
-![Heck 反应](https://bb.njzjz.win/file/jinzhe/img/18kz95wzbsaOGWu209O0OsNRfEIk8JZK2)
+![Heck 反应](https://pic.njzjz.win/18kz95wzbsaOGWu209O0OsNRfEIk8JZK2)
 
-![Suzuki 反应](https://bb.njzjz.win/file/jinzhe/img/1NOQLKiI2Je9EUdAb6RMCViRlqd50CbMg)
+![Suzuki 反应](https://pic.njzjz.win/1NOQLKiI2Je9EUdAb6RMCViRlqd50CbMg)
 
-![Sonogashira 反应](https://bb.njzjz.win/file/jinzhe/img/1e3daAZndCuY8Gf7KFyWgcK0p_3a6ci_u)
+![Sonogashira 反应](https://pic.njzjz.win/1e3daAZndCuY8Gf7KFyWgcK0p_3a6ci_u)
 
 早上给208的电脑装了Mestrenova 12，毫无疑问，用的是破解版crack，正版的话小微公司毫无疑问是用不起的。
