--- a/source/_posts/nj0328.md
+++ b/source/_posts/nj0328.md
@@ -12,13 +12,13 @@ tags:
 NJDOH于3月24日起公布了所有测试点的Negative数据总和，从图中可以看出，3月25日起，测试量稳定在了5k左右，应该就是目前的测试极限了。然而今明两天要将测试量限制在每日500，试剂盒的供应可能存在问题。
 <!--more-->
 
-![image alt text](https://bb.njzjz.win/file/jinzhe/img/1ptAY5tOFNbX3BtjNd5wgUwxsnY89Vlse)
+![image alt text](https://pic.njzjz.win/1ptAY5tOFNbX3BtjNd5wgUwxsnY89Vlse)
 
 我们可以看到，在测试数量不断扩大后（三天内翻了一倍），确诊率仍保持在40%上下，这说明数据增长的瓶颈仅仅在于测试量，那么，之后的确诊数据基本上是没有参考价值的——仅仅反应测试量的多寡。想要看到真实的数据，必须继续增加测试数量。武汉巅峰时期能测2万例，现在NJ 5k，NY 1万，还需要继续努力，继续被输血。
 
 从图中还可以看出，3月22日国民自卫队搭建的临时检测点，于3月25日开放大规模检测后，确诊率上升了近10%——这毫无疑问说明人群中有大量患者之前没有得到测试。只要这种现象持续下去，就说明测试量还没有追上疫情的蔓延速度。现在这个只能说明——如果你出现了症状，那么就有2/5的可能性是患者。当然我相信，既然已经shutdown了，之后还是有希望追上的（数据有滞后性）。
 
-![image alt text](https://bb.njzjz.win/file/jinzhe/img/1qt2EKhOGwpUJdA0FDR_3K2IDb11tmDDG)
+![image alt text](https://pic.njzjz.win/1qt2EKhOGwpUJdA0FDR_3K2IDb11tmDDG)
 
 来源：一亩三分地
 
