--- a/source/_posts/520.md
+++ b/source/_posts/520.md
@@ -12,17 +12,17 @@ tags:
 
 作者：华东师范大学化学与分子工程学院团委学生会主席团
 
-![1.jpg](https://bb.njzjz.win/file/jinzhe/img/1JJer9ShYoOeyoWxedkTNveT2swPeK1S3)
+![1.jpg](https://pic.njzjz.win/1JJer9ShYoOeyoWxedkTNveT2swPeK1S3)
 <!--more-->
 
-![2.jpg](https://bb.njzjz.win/file/jinzhe/img/17tAabVAW85gl6bjVH_hSXvSdKIx5FSKk)
+![2.jpg](https://pic.njzjz.win/17tAabVAW85gl6bjVH_hSXvSdKIx5FSKk)
 
-![3.jpg](https://bb.njzjz.win/file/jinzhe/img/1qnhrmOsglyWGIu0bQ8EczLNDJWTTnI4j)
+![3.jpg](https://pic.njzjz.win/1qnhrmOsglyWGIu0bQ8EczLNDJWTTnI4j)
 
-![4.jpg](https://bb.njzjz.win/file/jinzhe/img/117TPd91VxIXXOpkZE_br9vK3-mdJyyOB)
+![4.jpg](https://pic.njzjz.win/117TPd91VxIXXOpkZE_br9vK3-mdJyyOB)
 
-![5.jpg](https://bb.njzjz.win/file/jinzhe/img/1lWEq4kMpfeWZMUYw1qsAQJ8ovjkLUcdC)
+![5.jpg](https://pic.njzjz.win/1lWEq4kMpfeWZMUYw1qsAQJ8ovjkLUcdC)
 
-![6.jpg](https://bb.njzjz.win/file/jinzhe/img/1dXETcRA3WPCSczy3a_TuSTDoMyr8paYT)
+![6.jpg](https://pic.njzjz.win/1dXETcRA3WPCSczy3a_TuSTDoMyr8paYT)
 
-![7.jpg](https://bb.njzjz.win/file/jinzhe/img/1nzJEtuMyyAxySX4CLVanJoU9DgCoswUx)
+![7.jpg](https://pic.njzjz.win/1nzJEtuMyyAxySX4CLVanJoU9DgCoswUx)
