fix: update publications; add video

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -37,6 +37,7 @@
   journal =  {Physical Chemistry Chemical Physics},
   year =     2020,
   volume =   22,
+  number =   2,
   pages =    {683-691},
   abstract =     {Reactive molecular dynamics (MD) simulation makes
               it possible to study the reaction mechanism of complex
@@ -218,4 +219,12 @@
   image={https://www.researchgate.net/profile/Jinzhe_Zeng/publication/338283292/figure/fig1/AS:934167122542592@1599734206152/Fragmentation-scheme-of-the-MFCC-combustion-approach-The-blue-cycles-show-that-a-single.png},
   github={tongzhugroup/aimdfragmentation},
   researchgate=338283292
+}
+
+@article{Zeng_ChemRxiv_2021,
+  title={{Development of range-corrected deep learning potentials for fast, accurate quantum mechanical/molecular mechanical simulations of chemical reactions in solution}},
+  author={Jinzhe Zeng and Timothy J. Giese and ̧Sölen Ekesan and Darrin M. York*},
+  year=2021,
+  journal={ChemRxiv},
+  doi={10.26434/chemrxiv.14120447}
 }
