chore: uppercase title

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -222,9 +222,10 @@
 }
 
 @article{Zeng_ChemRxiv_2021,
-  title={{Development of range-corrected deep learning potentials for fast, accurate quantum mechanical/molecular mechanical simulations of chemical reactions in solution}},
+  title={{Development of Range-Corrected Deep Learning Potentials for Fast, Accurate Quantum Mechanical/molecular Mechanical Simulations of Chemical Reactions in Solution}},
   author={Jinzhe Zeng and Timothy J. Giese and ̧Sölen Ekesan and Darrin M. York*},
   year=2021,
   journal={ChemRxiv},
-  doi={10.26434/chemrxiv.14120447}
+  doi={10.26434/chemrxiv.14120447},
+  pdf={https://chemrxiv.org/ndownloader/files/26629976}
 }
