chore: refactor jsdelivr scripts; add publication information

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -227,5 +227,8 @@
   year=2021,
   journal={ChemRxiv},
   doi={10.26434/chemrxiv.14120447},
-  pdf={https://chemrxiv.org/ndownloader/files/26629976}
+  pdf={https://chemrxiv.org/ndownloader/files/26629976},
+  googlescholar = 1262175988288864992,
+  researchgate = 349702203,
+  image={https://www.researchgate.net/profile/Jinzhe-Zeng-2/publication/349702203/figure/fig1/AS:996651841908737@1614631724217/2D-free-energy-surfaces-R-P-O2-and-R-P-O5-coordinates-and-1D-reaction-profiles_W640.jpg}
 }
