chore: enable latex for publications

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -38,7 +38,7 @@
   year =     2020,
   volume =   22,
   number =   2,
-  pages =    {683-691},
+  pages =    {683--691},
   abstract =     {Reactive molecular dynamics (MD) simulation makes
               it possible to study the reaction mechanism of complex
               reaction systems at the atomic level. However, the
@@ -76,7 +76,7 @@
   journal = {Energy & Fuels},
   volume = 35,
   number = 1,
-  pages = {762-769},
+  pages = {762--769},
   year = 2021,
   doi = {10.1021/acs.energyfuels.0c03211},
   annote = { Reactive molecular dynamics (MD) simulation is a powerful tool to study the reaction mechanism of
@@ -160,7 +160,7 @@
   journal = {ACS Applied Materials & Interfaces},
   volume = 10,
   number = 37,
-  pages = {31725-31734},
+  pages = {31725--31734},
   year = 2018,
   doi = {10.1021/acsami.8b13498},
   note ={PMID: 30148952},
@@ -193,12 +193,12 @@
 }
 
 @article{Tian_PhysChemChemPhys_2019_v21_p22103,
-  title={Understanding the selectivity of inhibitors toward PI4KIIIα and PI4KIIIβ based molecular modeling},
+  title={Understanding the selectivity of inhibitors toward PI4KIII$\alpha$ and PI4KIII$\beta$ based molecular modeling},
   author={Shuaizhen Tian and Jinzhe Zeng and Xiao Liu* and Jianzhong Chen and John ZH Zhang and Tong Zhu*},
   journal={Physical Chemistry Chemical Physics},
   volume=21,
   number=39,
-  pages={22103-22112},
+  pages={22103--22112},
   year=2019,
   publisher={Royal Society of Chemistry},
   doi={10.1039/C9CP03598B},
