fix: update publication

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -207,10 +207,10 @@
 }
 
 @article{Cao_ChemRxiv_2019,
-  title={Combustion Driven by Fragment-based Ab Initio Molecular Dynamics Simulation},
+  title={Fragment-based Ab Initio Molecular Dynamics Simulation for Combustion},
   author={Liqun Cao and Jinzhe Zeng and Mingyuan Xu and Chih-Hao Chin and Tong Zhu* and John ZH Zhang*},
-  year=2019,
-  journal={ChemRxiv},
+  year=2021,
+  journal={Molecules (accepted)},
   doi={10.26434/chemrxiv.11462160},
   pdf={https://chemrxiv.org/ndownloader/files/20451738},
   googlescholar=14906626322539446006,
