chore: update citation

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -210,8 +210,11 @@
   title={Fragment-based Ab Initio Molecular Dynamics Simulation for Combustion},
   author={Liqun Cao and Jinzhe Zeng and Mingyuan Xu and Chih-Hao Chin and Tong Zhu* and John ZH Zhang*},
   year=2021,
-  journal={Molecules (accepted)},
-  doi={10.26434/chemrxiv.11462160},
+  journal={Molecules},
+  volume=26,
+  number=11,
+  pages=3120,
+  doi={10.3390/molecules26113120},
   pdf={https://chemrxiv.org/ndownloader/files/20451738},
   googlescholar=14906626322539446006,
   image={https://www.researchgate.net/profile/Jinzhe_Zeng/publication/338283292/figure/fig1/AS:934167122542592@1599734206152/Fragmentation-scheme-of-the-MFCC-combustion-approach-The-blue-cycles-show-that-a-single.png},
