chore: update pdf url

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -215,7 +215,7 @@
   number=11,
   pages=3120,
   doi={10.3390/molecules26113120},
-  pdf={https://chemrxiv.org/ndownloader/files/20451738},
+  pdf={https://www.mdpi.com/1420-3049/26/11/3120/pdf},
   googlescholar=14906626322539446006,
   image={https://www.researchgate.net/profile/Jinzhe_Zeng/publication/338283292/figure/fig1/AS:934167122542592@1599734206152/Fragmentation-scheme-of-the-MFCC-combustion-approach-The-blue-cycles-show-that-a-single.png},
   github={tongzhugroup/aimdfragmentation},
