--- a/source/_posts/3090.md
+++ b/source/_posts/3090.md
@@ -21,5 +21,5 @@ categories:
 
 可以看出，在上述测试案例中，3090的双精度性能较2080Ti有较大提升，但仍落后于V100和P100等专业显卡。
 
-[^1] Computer Physics Communications, 2018, 228, 178-184.
-[^2] SC20, 2020, 1-14.
+[^1]: Computer Physics Communications, 2018, 228, 178-184.
+[^2]: SC20, 2020, 1-14.
