--- a/source/_posts/3090.md
+++ b/source/_posts/3090.md
@@ -19,7 +19,7 @@ categories:
 | 训练10000步时间(s)   | 341    | 670      | 214     | 228
 | 10000步MD时间(s)     | 129    | 154      | 49      | 54
 
-可以看出，在上述测试案例中，3090的双精度性能较2080Ti有较大提升，但仍落后于V100和P100等专业显卡。
+可以看出，在上述测试案例中，3090的双精度性能较2080Ti有较大提升，但仍落后于V100和P100等专业计算显卡。当然，考虑到计算卡的价格也是3090的数倍，3090仍是不错的选择。
 
 [^1]: Computer Physics Communications, 2018, 228, 178-184.
 [^2]: SC20, 2020, 1-14.
