chore: add source

--- a/source/_posts/3090.md
+++ b/source/_posts/3090.md
@@ -6,6 +6,9 @@ categories:
   - Chemistry
 ---
 
+{% source zhihu_answer 1921509868 2021 6 3 %}
+{% source wechat BIT0-lfYf2rF7twMhHBMKg 2021 6 3 %}
+
 组里拨科研经费新入了16块3090，正好用3090测试一下深度学习势能+分子动力学模拟（MD）的性能。
 
 程序版本：DeePMD-kit 2.0.0.b0 双精度[^1][^2]，TensorFlow 2.4.1，CUDA Toolkit 11.1，LAMMPS 29Oct2020
