chore: update pdf urls

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -97,7 +97,7 @@
     image = {https://pubs.acs.org/na101/home/literatum/publisher/achs/journals/content/enfuem/2021/enfuem.2021.35.issue-1/acs.energyfuels.0c03211/20201230/images/medium/ef0c03211_0006.gif},
     googlescholar = 2272514516724855984,
     researchgate = 347440142,
-    pdf = {https://chemrxiv.org/ndownloader/files/24629300}
+    pdf = {https://chemrxiv.org/engage/api-gateway/chemrxiv/assets/orp/resource/item/60c74fbc337d6c7aece281ae/original/explore-the-chemical-space-of-linear-alkanes-pyrolysis-via-deep-potential-generator.pdf}
 }
 
 @article{Zhang_ComputPhysCommun_2020_v253_p107206,
@@ -228,7 +228,7 @@
   year=2021,
   journal={ChemRxiv},
   doi={10.26434/chemrxiv.14120447},
-  pdf={https://chemrxiv.org/ndownloader/files/26629976},
+  pdf={https://chemrxiv.org/engage/api-gateway/chemrxiv/assets/orp/resource/item/60c7557dbdbb899a20a3a828/original/development-of-range-corrected-deep-learning-potentials-for-fast-accurate-quantum-mechanical-molecular-mechanical-simulations-of-chemical-reactions-in-solution.pdf},
   googlescholar = 1262175988288864992,
   researchgate = 349702203,
   image={https://www.researchgate.net/profile/Jinzhe-Zeng-2/publication/349702203/figure/fig1/AS:996651841908737@1614631724217/2D-free-energy-surfaces-R-P-O2-and-R-P-O5-coordinates-and-1D-reaction-profiles_W640.jpg}
