--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -226,8 +226,8 @@
   title={{Development of Range-Corrected Deep Learning Potentials for Fast, Accurate Quantum Mechanical/molecular Mechanical Simulations of Chemical Reactions in Solution}},
   author={Jinzhe Zeng and Timothy J. Giese and ̧Sölen Ekesan and Darrin M. York*},
   year=2021,
-  journal={ChemRxiv},
-  doi={10.26434/chemrxiv.14120447},
+  journal={Journal of Chemical Theory and Computation},
+  doi={10.1021/acs.jctc.1c00201},
   pdf={https://chemrxiv.org/engage/api-gateway/chemrxiv/assets/orp/resource/item/60c7557dbdbb899a20a3a828/original/development-of-range-corrected-deep-learning-potentials-for-fast-accurate-quantum-mechanical-molecular-mechanical-simulations-of-chemical-reactions-in-solution.pdf},
   googlescholar = 1262175988288864992,
   researchgate = 349702203,
