chore: update pub image

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -231,5 +231,5 @@
   pdf={https://chemrxiv.org/engage/api-gateway/chemrxiv/assets/orp/resource/item/60c7557dbdbb899a20a3a828/original/development-of-range-corrected-deep-learning-potentials-for-fast-accurate-quantum-mechanical-molecular-mechanical-simulations-of-chemical-reactions-in-solution.pdf},
   googlescholar = 1262175988288864992,
   researchgate = 349702203,
-  image={https://www.researchgate.net/profile/Jinzhe-Zeng-2/publication/349702203/figure/fig1/AS:996651841908737@1614631724217/2D-free-energy-surfaces-R-P-O2-and-R-P-O5-coordinates-and-1D-reaction-profiles_W640.jpg}
+  image={https://pubs.acs.org/na101/home/literatum/publisher/achs/journals/content/jctcce/0/jctcce.ahead-of-print/acs.jctc.1c00201/20211013/images/medium/ct1c00201_0008.gif}
 }
