--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -226,6 +226,9 @@
   title={{Development of Range-Corrected Deep Learning Potentials for Fast, Accurate Quantum Mechanical/molecular Mechanical Simulations of Chemical Reactions in Solution}},
   author={Jinzhe Zeng and Timothy J. Giese and ̧Sölen Ekesan and Darrin M. York*},
   year=2021,
+  volume=17,
+  number=11,
+  pages={6993--7009},
   journal={Journal of Chemical Theory and Computation},
   doi={10.1021/acs.jctc.1c00201},
   pdf={https://chemrxiv.org/engage/api-gateway/chemrxiv/assets/orp/resource/item/60c7557dbdbb899a20a3a828/original/development-of-range-corrected-deep-learning-potentials-for-fast-accurate-quantum-mechanical-molecular-mechanical-simulations-of-chemical-reactions-in-solution.pdf},
