chore: fix image url

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -234,5 +234,5 @@
   pdf={https://chemrxiv.org/engage/api-gateway/chemrxiv/assets/orp/resource/item/60c7557dbdbb899a20a3a828/original/development-of-range-corrected-deep-learning-potentials-for-fast-accurate-quantum-mechanical-molecular-mechanical-simulations-of-chemical-reactions-in-solution.pdf},
   googlescholar = 1262175988288864992,
   researchgate = 349702203,
-  image={https://pubs.acs.org/na101/home/literatum/publisher/achs/journals/content/jctcce/0/jctcce.ahead-of-print/acs.jctc.1c00201/20211013/images/medium/ct1c00201_0008.gif}
+  image={https://pubs.acs.org/na101/home/literatum/publisher/achs/journals/content/jctcce/2021/jctcce.2021.17.issue-11/acs.jctc.1c00201/20211102/images/medium/ct1c00201_0008.gif}
 }
