fix: add new paper

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -236,3 +236,12 @@
   researchgate = 355227015,
   image={https://pubs.acs.org/na101/home/literatum/publisher/achs/journals/content/jctcce/2021/jctcce.2021.17.issue-11/acs.jctc.1c00201/20211102/images/medium/ct1c00201_0008.gif}
 }
+
+@article{Cao_PhysChemChemPhys_2022,
+  title={{Ab Initio Neural Network MD Simulation of Thermal Decomposition of High Energy Material CL-20/TNT}},
+  author={Liqun Cao and Jinzhe Zeng and Bo Wang and Tong Zhu* and John Z.H. Zhang*},
+  year=2022,
+  journal={Physical Chemistry Chemical Physics},
+  doi={10.1039/D2CP00710J},
+  researchgate = 360018447,
+}
