add volume and pages

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -243,5 +243,8 @@
   year=2022,
   journal={Physical Chemistry Chemical Physics},
   doi={10.1039/D2CP00710J},
+  volume=24,
+  issue=19,
+  pages={11801--11811},
   researchgate = 360018447,
 }
