update accepted manuscripts

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -66,7 +66,7 @@
   googlescholar = 11110115133859772670,
   github = {tongzhugroup/reacnetgenerator},
   researchgate=337541969,
-  pdf = {https://bf.njzjz.win/manuscript/c9cp05091d_7.pdf}
+  pdf = {https://scholarship.libraries.rutgers.edu/view/pdfCoverPage?instCode=01RUT_INST&filePid=13678734780004646&download=true}
 }
 
 @article{Zeng_EnergyFuels_2021_v35_p762,
@@ -97,7 +97,7 @@
     image = {https://pubs.acs.org/na101/home/literatum/publisher/achs/journals/content/enfuem/2021/enfuem.2021.35.issue-1/acs.energyfuels.0c03211/20201230/images/medium/ef0c03211_0006.gif},
     googlescholar = 2272514516724855984,
     researchgate = 347440142,
-    pdf = {https://chemrxiv.org/engage/api-gateway/chemrxiv/assets/orp/resource/item/60c74fbc337d6c7aece281ae/original/explore-the-chemical-space-of-linear-alkanes-pyrolysis-via-deep-potential-generator.pdf}
+    pdf = {https://scholarship.libraries.rutgers.edu/view/pdfCoverPage?instCode=01RUT_INST&filePid=13678688170004646&download=true}
 }
 
 @article{Zhang_ComputPhysCommun_2020_v253_p107206,
@@ -203,7 +203,7 @@
   doi={10.1039/C9CP03598B},
   googlescholar = 13761803133090538045,
   researchgate = 335902154,
-  pdf = {https://bf.njzjz.win/manuscript/c9cp03598b_5.pdf}
+  pdf = {https://scholarship.libraries.rutgers.edu/view/pdfCoverPage?instCode=01RUT_INST&filePid=13678734800004646&download=true}
 }
 
 @article{Cao_ChemRxiv_2019,
