add corresponding author

--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -250,7 +250,7 @@
 }
 
 @article{Giese_2022_JChemTheoryComput,
-author = {Giese, Timothy J. and Zeng, Jinzhe and Ekesan, Şölen and York, Darrin M.},
+author = {Giese, Timothy J. and Zeng, Jinzhe and Ekesan, Şölen and Darrin M. York*},
 title = {Combined QM/MM, Machine Learning Path Integral Approach to Compute Free Energy Profiles and Kinetic Isotope Effects in RNA Cleavage Reactions},
 journal = {Journal of Chemical Theory and Computation},
 year = {2022},
