--- a/source/_data/pub.bib
+++ b/source/_data/pub.bib
@@ -262,3 +262,19 @@ pages={4304--4317},
     abstract = { We present a fast, accurate, and robust approach for determination of free energy profiles and kinetic isotope effects for RNA 2′-O-transphosphorylation reactions with inclusion of nuclear quantum effects. We apply a deep potential range correction (DPRc) for combined quantum mechanical/molecular mechanical (QM/MM) simulations of reactions in the condensed phase. The method uses the second-order density-functional tight-binding method (DFTB2) as a fast, approximate base QM model. The DPRc model modifies the DFTB2 QM interactions and applies short-range corrections to the QM/MM interactions to reproduce ab initio DFT (PBE0/6-31G*) QM/MM energies and forces. The DPRc thus enables both QM and QM/MM interactions to be tuned to high accuracy, and the QM/MM corrections are designed to smoothly vanish at a specified cutoff boundary (6 Å in the present work). The computational speed-up afforded by the QM/MM+DPRc model enables free energy profiles to be calculated that include rigorous long-range QM/MM interactions under periodic boundary conditions and nuclear quantum effects through a path integral approach using a new interface between the AMBER and i-PI software. The approach is demonstrated through the calculation of free energy profiles of a native RNA cleavage model reaction and reactions involving thio-substitutions, which are important experimental probes of the mechanism. The DFTB2+DPRc QM/MM free energy surfaces agree very closely with the PBE0/6-31G* QM/MM results, and it is vastly superior to the DFTB2 QM/MM surfaces with and without weighted thermodynamic perturbation corrections. 18O and 34S primary kinetic isotope effects are compared, and the influence of nuclear quantum effects on the free energy profiles is examined. },
   image={https://pubs.acs.org/cms/10.1021/acs.jctc.2c00151/asset/images/medium/ct2c00151_0006.gif},
 }
+
+@incollection{Zeng_2022_Chapter,
+  title = {Chapter 12 - Neural network potentials},
+  editor = {Pavlo O. Dral},
+  booktitle = {Quantum Chemistry in the Age of Machine Learning},
+  publisher = {Elsevier},
+  pages = {279-294},
+  year = {2023},
+  isbn = {978-0-323-90049-2},
+  doi = {10.1016/B978-0-323-90049-2.00001-9},
+  author = {Jinzhe Zeng and Liqun Cao and Tong Zhu*},
+  keywords = {Neural network, Potential energy surface, Molecular dynamic simulation, Chemical reaction},
+  abstract = {Recently, artificial neural network-based methods for the construction of potential energy surfaces and molecular dynamics (MD) simulations based on them have been increasingly used in the field of theoretical chemistry. The neural network potentials (NNP) strike a good balance between accuracy and computational efficiency relative to quantum chemical calculations and MD simulations based on classical force fields. Thus, NNP is becoming a powerful tool for studying the structure and function of molecules. In this chapter, we introduce the basic theory of NNP. The construction steps and the usage of NNP are also introduced in detail with the MD simulation of methane combustion as an example. We hope that this chapter can help those readers who are new but interested in entering this field.},
+  image = {https://ars.els-cdn.com/content/image/3-s2.0-B9780323900492000019-f12-01-9780323900492.sml},
+  github = {tongzhugroup/Chapter13-tutorial},
+}
